@@ -83,8 +83,8 @@ bpsb-surface-props-gui-preset-reset=Apply this preset again
 bpsb-ils-prefix=Fake __1__
 
 [sandbox]
-bpsb-sb-player-lab=Personal
-bpsb-sb-force-lab=Force
+bpsb-sb-player-lab=[img=entity/character] Personal
+bpsb-sb-force-lab=[img=utility/force_editor_icon] Force
 bpsb-sb-space-exploration-disabled=(Requires SE)
 bpsb-sb-force-lab-space-exploration=Force's planet
 bpsb-sb-force-orbit-space-exploration=Force's orbit
