@@ -83,8 +83,8 @@ bpsb-surface-props-gui-preset-reset=Применить эту преднастр
 bpsb-ils-prefix=Искусств. __1__
 
 [sandbox]
-bpsb-sb-player-lab=Моя личная Песочница
-bpsb-sb-force-lab=Песочница союзников
+bpsb-sb-player-lab=[img=entity/character] Моя личная Песочница
+bpsb-sb-force-lab=[img=utility/force_editor_icon] Песочница союзников
 bpsb-sb-space-exploration-disabled=(Требуется мод SE)
 bpsb-sb-force-lab-space-exploration=Планетарная Песочница союзников
 bpsb-sb-force-orbit-space-exploration=Орбитальная Песочница союзников
