@@ -1,6 +1,6 @@
 local Migrate = {}
 
-Migrate.version = 020301
+Migrate.version = 020302
 
 function Migrate.Run()
     if not storage.version then
@@ -27,6 +27,7 @@ function Migrate.Run()
         if storage.version < 020106 then Migrate.v2_1_6() end
         if storage.version < 020107 then Migrate.v2_1_7() end
         if storage.version < 020201 then Migrate.v2_2_1() end
+        if storage.version < 020302 then Migrate.v2_3_2() end
     end
 
     storage.version = Migrate.version
@@ -486,6 +487,22 @@ function Migrate.v2_2_1()
     end
 
     log("Migration 2.2.1 Finished")
+end
+
+function Migrate.v2_3_2()
+    --[[
+    2.3.2 sets localised strings for each sandbox surface
+    ]]
+
+    log("Migration 2.3.2 Starting")
+
+    for _, surface in pairs(game.surfaces) do
+        if Lab.IsLab(surface) then
+            surface.localised_name = Lab.LocalisedNameFromLabName(surface.name)
+        end
+    end
+
+    log("Migration 2.3.2 Finished")
 end
 
 return Migrate
